# cpp98helpers

./: .gitignore  .travis.yml  .travis.yml.test.txt  CMakeCache.txt  Git BashADMIN.lnk  Makefile  README.md  SPSCAudio.cpp  SPSCAudio.ruleset  SPSCAudio.sln  SPSCAudio.suppress  SPSCAudio.vcxproj  SPSCAudio.vcxproj.filters  Win32Trace.h  build.bat  cmake_install.cmake  my_concurrent.h  my_spsc_buffer.h  script.sh
Debug/: SPSCAudio.lastbuildstate  SPSCAudio.nativecodeanalysis.sarif  SPSCAudio.vcxproj.FileListAbsolute.txt  spscaudio.obj.enc
Release/: SPSCAudio.iobj  SPSCAudio.ipdb  SPSCAudio.nativecodeanalysis.sarif  SPSCAudio.vcxproj.FileListAbsolute.txt  vc.nativecodeanalysis.all.xml
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/concurrent_tests/: CMakeLists.txt  README.txt
my/: Text.cpp  my.h
qt/build-spsc-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
qt/spsc/: spsc.pro
vc6/spscvc6/: ReadMe.txt  my_thread_state_defs.cpp  spscvc6.dsp  spscvc6.dsw  stdafx.h
x64/Debug/: SPSCAudio.lastbuildstate  SPSCAudio.nativecodeanalysis.sarif  SPSCAudio.vcxproj.FileListAbsolute.txt  SPSCAudio_manifest.rc  spscaudio.obj.enc
x64/Release/: SPSCAudio.iobj  SPSCAudio.ipdb
